about team-wrap height issue

--- a/css/main.css
+++ b/css/main.css
@@ -953,7 +953,7 @@ section.about-detail .detail-wrap .about-detail-list {
 .about-team {
     padding: 10% 0 0 0;
     width: 100%;
-    height: 70vh;
+    height: 100%;
     position: relative;
     background-color: #ccd9ed;
     overflow: hidden;
@@ -1006,6 +1006,11 @@ section.about-detail .detail-wrap .about-detail-list {
 }
 
 @media only screen and (max-width: 768px) {
+    
+
+    .about-team {
+        height: 60vh;
+    }
 
     .about-intro-text h1 {
     
@@ -1043,6 +1048,10 @@ section.about-detail .detail-wrap .about-detail-list {
 }
 
 @media only screen and (max-width: 640px) {
+
+    .about-team {
+        height: 60vh;
+    }
 
     .about-intro-text h1 {
     
@@ -1096,6 +1105,10 @@ section.about-detail .detail-wrap .about-detail-list {
 
 @media only screen and (max-width: 480px) {
 
+    .about-team {
+        height: 60vh;
+    }
+
     .about-intro-text h1 {
     
         display: block;
@@ -1138,6 +1151,10 @@ section.about-detail .detail-wrap .about-detail-list {
 
 
 @media only screen and (max-width: 360px) {
+
+    .about-team {
+        height: 60vh;
+    }
 
     .about-intro {
 
